# expense-tracker

./: .gitignore  .sample.env  README.md  build.sh  entrypoint.sh  main.py  pyproject.toml  requirements.txt
benchmarks/js/: results.json  server.py
benchmarks/js/templates/: index.html
data/static/css/: input.css  styles.css
data/static/js/: login.js
docs/transactions/: README.md
src/accounts/: adapters.py  admin.py  forms.py  managers.py  models.py  signals.py  urls.py  views.py
src/accounts/migrations/: 0001_initial.py  0002_user_is_verified_alter_user_is_active.py  0003_alter_user_is_active.py
src/app/: config.py  mixins.py  settings.py  urls.py
src/pages/: urls.py  views.py
src/staticfiles/css/: input.css  styles.css
src/staticfiles/js/: babel.config.js  package-lock.json  package.json  transactions.js
src/tailwincdss/: package.json  tailwind.config.js
src/tailwindcss/: package-lock.json  tailwind.config.js
src/templates/: base.html
src/templates/account/: account_inactive.html  account_was_deleted.html  delete.html  email.html  email_confirm.html  login.html  password_change.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  signup.html  verification_sent.html
src/templates/accounts/: login.html
src/templates/includes/: footer.html  header.html
src/templates/pages/: home.html
src/tests/: base.py  factories.py
src/transactions/: admin.py  contexts.py  forms.py  managers.py  models.py  urls.py  views.py
(+31 files in other folders)
