[tool.poetry]
name = "expense-tracker"
version = "0.1.0"
description = ""
authors = ["bessavagner <bessavagner@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.5"
uvicorn = "^0.34.0"
gunicorn = "^23.0.0"
whitenoise = "^6.8.2"
watchfiles = "^1.0.4"
psycopg2-binary = "^2.9.10"
django-environ = "^0.12.0"
python-dotenv = "^1.0.1"
black = "^24.10.0"
isort = "^5.13.2"
factory-boy = "^3.3.1"
django-allauth = "^65.3.1"
requests = "^2.32.3"
jwt = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
